# rs_log_learning

./: CMakeLists.txt  package.xml
CMake/: Findmlpack.cmake
config/: config_mongodb_playback_annotated.ini
descriptors/analysis_engines/: MindPalaceEvaluate.xml  MindPalaceLearn.xml  MindPalaceTrain.xml  addGroundTruth.xml  rawToAnnotated.xml  simpleLearn.xml
descriptors/annotators/: MindPalaceAnnotator.xml  SimpleLearnAnnotator.xml  mpGTAnnotator.xml
descriptors/typesystem/: all_types.xml  log_types.xml  typeDescriptors.xml
descriptors/typesystem/types/: learning.xml
include/: Geometry.h  GroundTruth.h  LearnAnnotationStorage.h  LearningAnnotation.h  MPCore.h  MPIdentifiable.h  mpGTui.h  roiDrawingArea.h
include/algorithms/: DecisionTreeAlgorithm.h  NearestNeighborAlgorithm.h  mpAlgorithm.h
include/containers/: Geometry.h  GroundTruth.h  LearningAnnotation.h  SemanticColor.h
include/rs_log_learning/: LearnAnnotationStorage.h  MPCore.h  MPIdentifiable.h  mpGTui.h  roiDrawingArea.h
include/rs_log_learning/algorithms/: DecisionTreeAlgorithm.h  NearestNeighborAlgorithm.h  mpAlgorithm.h
include/rs_log_learning/containers/: Geometry.h  GroundTruth.h  LearningAnnotation.h  SemanticColor.h
src/: Geometry.cpp  GroundTruth.cpp  LearnAnnotationStorage.cpp  LearningAnnotation.cpp  MPCore.cpp  MPIdentifiable.cpp  MindPalaceAnnotator.cpp  SimpleLearnAnnotator.cpp  mpGTAnnotator.cpp  mpGTui.cpp  roiDrawingArea.cpp
src/algorithms/: DecisionTreeAlgorithm.cpp  NearestNeighborAlgorithm.cpp  mpAlgorithm.cpp
src/containers/: Geometry.cpp  GroundTruth.cpp  LearningAnnotation.cpp  SemanticColor.cpp
srv/: ImageGTAnnotation.srv
testing/mlpack_test/: CMakeLists.txt  mlpack_test.cxx
